--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat-deploy": "^0.10.5",
     "ethereum-waffle": "^3.4.0",
     "prettier": "^2.5.1",
+    "erc721a": "^4.2.3",
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.0",
     "ethers": "^5.5.4",
