--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "solidity-coverage": "^0.7.18",
     "hardhat-deploy": "^0.10.5",
     "ethereum-waffle": "^3.4.0",
+    "nft.storage": "^6.0.1",
     "prettier": "^2.5.1",
     "erc721a": "^4.2.3",
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.0",
     "ethers": "^5.5.4",
+    "path": "^0.12.7",
+    "mime": "^3.0.0",
     "chai": "^4.3.4",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
