contract fix, tests added 77%

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
     "compilerOptions": {
-      "target": "es2018",
-      "module": "commonjs",
-      "strict": true,
-      "esModuleInterop": true,
-      "outDir": "dist",
-      // optional:
-      // "suppressImplicitAnyIndexErrors": true
-      // consider:
-      // "skipLibCheck": true,
-      // "forceConsistentCasingInFileNames": true
+        "target": "es2018",
+        "module": "commonjs",
+        "strict": true,
+        "esModuleInterop": true,
+        "outDir": "dist"
+        // optional:
+        // "suppressImplicitAnyIndexErrors": true
+        // consider:
+        // "skipLibCheck": true,
+        // "forceConsistentCasingInFileNames": true
     },
     "include": ["./scripts", "./test", "./deploy", "./deploy-helpers"],
     "files": ["./hardhat.config.ts", "./helper-hardhat-config.ts"]
-  }
+}
