--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^17.0.13",
     "@types/mocha": "^9.1.0",
     "@types/chai": "^4.3.0",
+    "@types/mime": "3.0.4",
     "cross-env": "^7.0.2",
     "typechain": "^7.0.0",
     "ts-node": "^10.4.0",
